--- a/static/firma/index.html
+++ b/static/firma/index.html
@@ -5,7 +5,7 @@
 
 	<script
 		id="sap-ui-bootstrap"
-		src="/resources/sap-ui-core.js"
+		src="../resources/sap-ui-core.js"
 		displayBlock="true"
 		data-sap-ui-theme="sap_belize"
 		data-sap-ui-libs="sap.m"
